--- a/style.css
+++ b/style.css
@@ -41,14 +41,15 @@ svg {
 }
 
 .cover-bg a {
-  border-bottom:2px solid yellow;
+  border-bottom:2px solid blue;
   padding-bottom:4px;
   color:white;
   text-decoration:none;
 }
 
 .cover-bg a:hover {
-  color:yellow;
+  color:blue;
+  cursor: pointer!important;
 }
 
 h1 {
@@ -61,6 +62,12 @@ h2 {
   font-family: 'Heebo', sans-serif;
   font-weight: 300;
   font-size:18px;
+}
+
+h3 {
+  font-family: 'Heebo', sans-serif;
+  font-weight: 300;
+  font-size:12px;
 }
 
 .body-stuff {
